--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
 	<H1 style="font-family:Garamond, serif;color:#4682B4"; >Eloheh Patient Testimonials</H1>
 	<div class="absolute6">
 		<div class="absolute7">
-		<iframe width="100%" height="100%"; src="/testimonial_1/page.html" style="border:none;"></iframe> 
+		<iframe width="100%" height="100%"; src="testimonial_1/page.html" style="border:none;"></iframe> 
 		</div>
 		
 		<div class="absolute8">
-		<iframe width="100%" height="100%" src="/testimonial_2/page.html" style="border:none;"></iframe>
+		<iframe width="100%" height="100%" src="testimonial_2/page.html" style="border:none;"></iframe>
 		</div>
 		
 		<div class="absolute9">
-		<iframe width="100%" height="100%" src="/testimonial_3/page.html" style="border:none;"></iframe>
+		<iframe width="100%" height="100%" src="testimonial_3/page.html" style="border:none;"></iframe>
 		</div>
 		
 		<div class="absolute10">
-		<iframe width="100%" height="100%" src="/testimonial_4/page.html" style="border:none;"></iframe> 
+		<iframe width="100%" height="100%" src="testimonial_4/page.html" style="border:none;"></iframe> 
 		</div>
 		
 		<div class="absolute11">
-		<iframe width="100%" height="100%" src="/testimonial_5/page.html" style="border:none;"></iframe>
+		<iframe width="100%" height="100%" src="testimonial_5/page.html" style="border:none;"></iframe>
 		</div>
 		
 	</div>
