--- a/testimonial_1/page.html
+++ b/testimonial_1/page.html
@@ -62,8 +62,8 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Lorem ipsum dolor sit amettest, consectetur adipiscing elit. Nunc ut consequat augue, lacinia laoreet nulla. Suspendisse in pellentesque orci. In enim augue, vehicula eget dictum viverra, posuere non ligula. Nullam ac elementum erat, mollis maximus orci. Vivamus a lorem faucibus, ultricies magna a, tempus enim. Nam pulvinar pellentesque urna eget pellentesque. Nullam euismod odio ut magna dignissim imperdiet. Maecenas fermentum nibh lectus. Fusce egestas ligula in risus imperdiet accumsan. Nullam ultrices a magna sed tincidunt. Donec scelerisque in quam nec tristique. Nam euismod dolor quam, vel interdum turpis dignissim eget. Praesent vulputate tellus sed mauris porttitor, sed mattis eros luctus. Duis eu lectus efficitur, fermentum eros sit amet, ullamcorper lectus. Fusce ultrices felis et justo consectetur aliquet.</p></div>
-	<div class="absolute3"><H1>Fred</H1></div>
+	<div class="absolute2"><p>Before Eloheh, keeping track of my health was difficult. Every device that I was given to watch both my blood sugar and heart rate was either too bulky or required constant visits to the doctor.  But Eloheh products are superior to other offerings. No longer do I have to go to the doctor to get my monitor replaced, I can simply follow the instructions on the app, or if needed, call them, and within a few days, I can get it replaced. Not only this, but all the data that is collected is automatically sent to my doctor and alerts me if something is out of range. Thanks to Eloheh, not only am I saving money, but I can better keep track of my health </p></div>
+	<div class="absolute3"><H1>Xavier Musa</H1></div>
 	</div>
 </body>
 
