--- a/testimonial_2/page.html
+++ b/testimonial_2/page.html
@@ -62,8 +62,8 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut consequat augue, lacinia laoreet nulla. Suspendisse in pellentesque orci. In enim augue, vehicula eget dictum viverra, posuere non ligula. Nullam ac elementum erat, mollis maximus orci. Vivamus a lorem faucibus, ultricies magna a, tempus enim. Nam pulvinar pellentesque urna eget pellentesque. Nullam euismod odio ut magna dignissim imperdiet. Maecenas fermentum nibh lectus. Fusce egestas ligula in risus imperdiet accumsan. Nullam ultrices a magna sed tincidunt. Donec scelerisque in quam nec tristique. Nam euismod dolor quam, vel interdum turpis dignissim eget. Praesent vulputate tellus sed mauris porttitor, sed mattis eros luctus. Duis eu lectus efficitur, fermentum eros sit amet, ullamcorper lectus. Fusce ultrices felis et justo consectetur aliquet.</p></div>
-	<div class="absolute3"><H1>Fred</H1></div>
+	<div class="absolute2"><p>Living in the middle of nowhere seems like a rare occurrence. Well, for me, that's everyday life. I must drive 20 miles to get groceries.  What is even worse is that when I need medical services, like doctor appointments or emergency services, there are no providers around me. That was until Eloheh came around. Their innovative solutions allow them to be able to do routine checkups completely remotely. No longer do I have to travel a long distance just for a 15-minute checkup. And when their remote patient monitoring systems were not enough, they sent a medical professional to me, at no extra cost. Thanks to Eloheh, I no longer must worry about accessibility, they handle that for me, so I can relax more.</p></div>
+	<div class="absolute3"><H1>Bruce Floyd</H1></div>
 	</div>
 </body>
 
