--- a/testimonial_2/page.html
+++ b/testimonial_2/page.html
@@ -8,7 +8,6 @@ div.absolute {
   width: 49%;
   aspect-ratio: 1/1;
   
-
 }
 
 div.absolute2 {
@@ -22,7 +21,7 @@ div.absolute2 {
   aspect-ratio: 1/1;
   font-size: 2vw;
   font-family: Garamond, serif;
-  color:#4682B4;
+  color:#588EBB;
 
 }
 
@@ -40,6 +39,7 @@ div.absolute3 {
   color:#4682B4;
   margin: 0;
   padding: 0;
+  text-decoration: underline
 
 }
 
