--- a/testimonial_4/page.html
+++ b/testimonial_4/page.html
@@ -1,6 +1,5 @@
 <html>
 <style>	
-
 div.absolute {
   position: absolute;
   top: 9.5%;
@@ -8,7 +7,6 @@ div.absolute {
   width: 49%;
   aspect-ratio: 1/1;
   
-
 }
 
 div.absolute2 {
@@ -22,7 +20,7 @@ div.absolute2 {
   aspect-ratio: 1/1;
   font-size: 2vw;
   font-family: Garamond, serif;
-  color:#4682B4;
+  color:#588EBB;
 
 }
 
@@ -40,6 +38,7 @@ div.absolute3 {
   color:#4682B4;
   margin: 0;
   padding: 0;
+  text-decoration: underline
 
 }
 
