--- a/index.html
+++ b/index.html
@@ -1,75 +1,62 @@
 <html>
 <style>	
 
- div.absolute6 {
-  position: relative;
+div.absolute {
+  position: absolute;
+  top: 9.5%;
+  left: 0%;
+  width: 49%;
+  aspect-ratio: 1/1;
+  
+}
+
+div.absolute2 {
+  position: absolute;
   display:flex
   align-items:center;
   justify-items:center;
+  top: 9.1%;
+  left: 51%;
+  width: 49%;
+  aspect-ratio: 1/1;
+  font-size: 2vw;
+  font-family: Garamond, serif;
+  color:#588EBB;
+
+}
+
+div.absolute3 {
+  position: absolute;
+  display:flex
+  align-items:start;
+  justify-items:start;
   top: 0%;
   left: 0%;
   width: 100%;
-  height: auto;
-  border: 3px solid #73AD21;
-  overflow:scroll;
-  padding: 0;
+  height: 8%; 
+  font-size: 1.25vw;
+  font-family: Garamond, serif;
+  color:#4682B4;
   margin: 0;
+  padding: 0;
+  text-decoration: underline
+
+}
+
+div.absolute4 {
+  position: absolute;
+  top: 00%;
+  width: 98%;
+  aspect-ratio:17/9.2;
+  border: 3px solid #73AD21; 
+  font-size: 1.25vw;
+  font-family: Garamond, serif;
   color:#4682B4;
   background-color: #f0f8ff;
-  display: block;
- }
- 
- div.absolute7 {
-  position: relative;
-  top:15%;
-  width: 91%;
-  aspect-ratio:17/9.2;
-  overflow:visible;
-  padding: 0;
   margin: 0;
-  display: block;
- }
- 
- div.absolute8 {
-  position: relative;
-  width: 91%;
-  aspect-ratio:17/9.2;
-  overflow:visible;
   padding: 0;
-  margin: 0;
-  display: block;
- }
- 
-  div.absolute9 {
-  position: relative;
-  width: 91%;
-  aspect-ratio:17/9.2;
-  overflow:visible;
-  padding: 0;
-  margin: 0;
-  display: block;
- }
- 
-  div.absolute10 {
-  position: relative;
-  width: 91%;
-  aspect-ratio:17/9.2;
-  overflow:visible;
-  padding: 0;
-  margin: 0;
-  display: block;
- }
- 
-  div.absolute11 {
-  position: relative;
-  width: 91%;
-  aspect-ratio:17/9.2;
-  overflow:visible;
-  padding: 0;
-  margin: 0;
-  display: block;
- }
- 
+
+}
   
 </style>
 <body style="background-color:#f0f8ff;">
