--- a/index.html
+++ b/index.html
@@ -1,63 +1,86 @@
 <html>
 <style>	
 
-div.absolute {
-  position: absolute;
-  top: 9.5%;
-  left: 0%;
-  width: 49%;
-  aspect-ratio: 1/1;
-  
-}
 
-div.absolute2 {
-  position: absolute;
+ div.absolute6 {
+  position: relative;
   display:flex
   align-items:center;
   justify-items:center;
-  top: 9.1%;
-  left: 51%;
-  width: 49%;
-  aspect-ratio: 1/1;
-  font-size: 2vw;
-  font-family: Garamond, serif;
-  color:#588EBB;
-  font-style: italic;
-
-}
-
-div.absolute3 {
-  position: absolute;
-  display:flex
-  align-items:start;
-  justify-items:start;
   top: 0%;
   left: 0%;
   width: 100%;
-  height: 8%; 
-  font-size: 1.25vw;
-  font-family: Garamond, serif;
-  color:#4682B4;
-  margin: 0;
+  height: 90%;
+  border: 3px solid #73AD21;
+  overflow:scroll;
   padding: 0;
-  text-decoration: underline
-
-}
-
-div.absolute4 {
-  position: absolute;
-  top: 00%;
-  width: 98%;
-  aspect-ratio:17/9.2;
-  border: 3px solid #73AD21; 
-  font-size: 1.25vw;
-  font-family: Garamond, serif;
+  margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
-  margin: 0;
+  display: block;
+ }
+ 
+ div.absolute7 {
+  position: relative;
+  top:1%;
+  width: 91%;
+  aspect-ratio:17/9.2;
+  overflow:visible;
   padding: 0;
-
-}
+  margin: 0;
+  display: block;
+ }
+  
+   div.absolute12 {
+  position: relative;
+  width: 100%;
+  height:auto;
+  border: 3px solid #73AD21;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+ }
+ 
+     div.email {
+  position: absolute;
+  width: 30%;
+  left: 62%;
+  height:auto;
+  border: 3px solid #73AD21;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+ }
+ 
+    div.update {
+  position: absolute;
+  width: 30%;
+  left: 31%;
+  height:auto;
+  border: 3px solid #73AD21;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+ }
+ 
+    div.download {
+  position: absolute;
+  width: 30%;
+  height:auto;
+  border: 3px solid #73AD21;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+ }
+ 
+ <script>
+let text = document.lastModified;
+document.getElementById("timer").innerHTML = text;
+</script>
   
 </style>
 <body style="background-color:#f0f8ff;">
@@ -84,7 +107,31 @@ div.absolute4 {
 		<iframe width="100%" height="100%" src="testimonial_5/page.html" style="border:none;"></iframe>
 		</div>
 		
-	</div>
+		</div>
+	<div class="absolute12">
+		
+		<div class="download">
+		<button type="button">Download Testimonials</button>
+		
+		</div>
+		
+		<div class="update">
+		<p id="timer"></p>
+		
+		 <script>
+		let text = document.lastModified;
+		document.getElementById("timer").innerHTML = text;
+		</script>
+		
+		</div>
+		
+		<div class="email">
+		<a href="mailto:espino53@purdue.edu">
+		<button type="button">Contact Me</button>
+		</a>
+		
+		</div>
+		</div>
 
 
 </body>
