--- a/index.html
+++ b/index.html
@@ -110,10 +110,13 @@ document.getElementById("timer").innerHTML = text;
 		</div>
 	<div class="absolute12">
 		
-		<div class="download">
-		<button type="button">Download Testimonials</button>
 		
+		<div class="download">
+		<a href="MGMT_382_page_5-main.zip" download>
+		<button type="button">Download Testimonial Page</button>
+		</a>
 		</div>
+		
 		
 		<div class="update">
 		<p id="timer"></p>
