--- a/testimonial_3/page.html
+++ b/testimonial_3/page.html
@@ -62,7 +62,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut consequat augue, lacinia laoreet nulla. Suspendisse in pellentesque orci. In enim augue, vehicula eget dictum viverra, posuere non ligula. Nullam ac elementum erat, mollis maximus orci. Vivamus a lorem faucibus, ultricies magna a, tempus enim. Nam pulvinar pellentesque urna eget pellentesque. Nullam euismod odio ut magna dignissim imperdiet. Maecenas fermentum nibh lectus. Fusce egestas ligula in risus imperdiet accumsan. Nullam ultrices a magna sed tincidunt. Donec scelerisque in quam nec tristique. Nam euismod dolor quam, vel interdum turpis dignissim eget. Praesent vulputate tellus sed mauris porttitor, sed mattis eros luctus. Duis eu lectus efficitur, fermentum eros sit amet, ullamcorper lectus. Fusce ultrices felis et justo consectetur aliquet.</p></div>
+	<div class="absolute2"><p>Usually takes me a few days just to get a response from my doctors. With Eloheh,not only do they provide life changing medical devices,but they also make it easy to check in with my doctors and see my results and past results. And with their priority plus plan,I get guaranteed responses from my doctor within two days.Not only does Eloheh offer speed and consistency,but I am able to better manage my health because of them,and no longer have to worry. </p></div>
 	<div class="absolute3"><H1>Nicole Daniels</H1></div>
 	</div>
 </body>
