--- a/testimonial_4/page.html
+++ b/testimonial_4/page.html
@@ -62,7 +62,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut consequat augue, lacinia laoreet nulla. Suspendisse in pellentesque orci. In enim augue, vehicula eget dictum viverra, posuere non ligula. Nullam ac elementum erat, mollis maximus orci. Vivamus a lorem faucibus, ultricies magna a, tempus enim. Nam pulvinar pellentesque urna eget pellentesque. Nullam euismod odio ut magna dignissim imperdiet. Maecenas fermentum nibh lectus. Fusce egestas ligula in risus imperdiet accumsan. Nullam ultrices a magna sed tincidunt. Donec scelerisque in quam nec tristique. Nam euismod dolor quam, vel interdum turpis dignissim eget. Praesent vulputate tellus sed mauris porttitor, sed mattis eros luctus. Duis eu lectus efficitur, fermentum eros sit amet, ullamcorper lectus. Fusce ultrices felis et justo consectetur aliquet.</p></div>
+	<div class="absolute2"><p>Most people worry about costs. Not me though,as i get medical service through Eloheh. Not only do they make many medical devices and provide high quality services, but they only charge market price,or sometimes even lower than market price. They also allow you to pay up to a year after your service,so you no longer have to worry when something happens how to pay. And its easy to fix mistakes if they accidentially bill you for something ,due to their 24/7 customer support line. Eloheh saves me money, so I can worry less and enjoy life. </p></div>
 	<div class="absolute3"><H1>Mitch Brave</H1></div>
 	</div>
 </body>
