--- a/testimonial_5/page.html
+++ b/testimonial_5/page.html
@@ -62,7 +62,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>When I got into a car accident, I was in a tough spot,as no other medical product manufacturer had the piece that i needed. But Eloheh worked with me to figure out how to make the piece custom for me. And the great thing was that because i was on their plus plan, I only had to cover the cost of the piece itself, and all the other costs they paid for them. Eloheh does not use cookie cutter service or products,they work with you to ensure a specialized service/product made just for you. Eloheh makes sure that you are properly taken care of. </p></div>
+	<div class="absolute2"><p>When I got into a car accident, I was in a tough spot, as no other medical product manufacturer had the piece that I needed. But Eloheh worked with me to figure out how to make the piece custom for me. And the remarkable thing was that because I was on their plus plan, I only had to cover the cost of the piece itself, and all the other costs they paid for them. Eloheh does not use cookie cutter service or products, they work with you to ensure a specialized service/product made just for you. Eloheh makes sure that you are properly taken care of. </p></div>
 	<div class="absolute3"><H1>Abraham Jackson</H1></div>
 	</div>
 </body>
