--- a/testimonial_4/page.html
+++ b/testimonial_4/page.html
@@ -62,7 +62,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Most people worry about costs. Not me though,as i get medical service through Eloheh. Not only do they make many medical devices and provide high quality services, but they only charge market price,or sometimes even lower than market price. They also allow you to pay up to a year after your service,so you no longer have to worry when something happens how to pay. And its easy to fix mistakes if they accidentially bill you for something ,due to their 24/7 customer support line. Eloheh saves me money, so I can worry less and enjoy life. </p></div>
+	<div class="absolute2"><p>Most people worry about costs. Not me though, as I get medical service through Eloheh. Not only do they make many medical devices and provide high quality services, but they only charge market prices, or sometimes even lower than market price. They also allow you to pay up to a year after your service, so you no longer have to worry when something happens how to pay. And it's easy to fix mistakes if they accidentally bill you for something, due to their 24/7 customer support line. Eloheh saves me money, so I can worry less and enjoy life. </p></div>
 	<div class="absolute3"><H1>Mitch Brave</H1></div>
 	</div>
 </body>
