--- a/testimonial_3/page.html
+++ b/testimonial_3/page.html
@@ -62,7 +62,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Usually takes me a few days just to get a response from my doctors. With Eloheh,not only do they provide life changing medical devices,but they also make it easy to check in with my doctors and see my results and past results. And with their priority plus plan,I get guaranteed responses from my doctor within two days.Not only does Eloheh offer speed and consistency,but I am able to better manage my health because of them,and no longer have to worry. </p></div>
+	<div class="absolute2"><p>Usually takes me a few days just to get a response from my doctors. With Eloheh, not only do they provide life changing medical devices, but they also make it easy to check in with my doctors and see my results and past results. And with their priority plus plan, I get guaranteed responses from my doctor within two days. Not only does Eloheh offer speed and consistency, but I am able to better manage my health because of them and no longer have to worry about sudden health issues. </p></div>
 	<div class="absolute3"><H1>Nicole Daniels</H1></div>
 	</div>
 </body>
