--- a/testimonial_2/page.html
+++ b/testimonial_2/page.html
@@ -63,7 +63,7 @@ div.absolute4 {
 	
 	<div class="absolute4">
 	<div class="absolute"><img src="images.jpeg" alt="test" width="100%" height="100%"></div>
-	<div class="absolute2"><p>Living in the middle of nowhere seems like a rare occurrence. Well, for me, that's everyday life. I must drive 20 miles to get groceries. What is even worse is that when I need medical services, like doctor appointments or emergency services, there are no providers around me. That was until Eloheh came around. Their innovative solutions allow them to be able to do routine checkups completely remotely. No longer do I have to travel a long distance just for a 15-minute checkup. And when their remote patient monitoring systems were not enough, they sent a medical professional to me, at no extra cost. Thanks to Eloheh, I no longer must worry about accessibility, they handle that for me, so I can relax more. </p></div>
+	<div class="absolute2"><p>Living in the middle of nowhere seems like a rare occurrence. Well, for me, that's everyday life. I must drive at least 20 miles just to get groceries. What is even worse is that when I need medical services, like doctor appointments or emergency services, there are no providers around me. That was until Eloheh came around. Their innovative solutions allow them to be able to do routine checkups completely remotely. No longer do I have to travel a long distance just for a 15-minute checkup. And when their remote patient monitoring systems were not enough, they sent a medical professional to me, at no extra cost. Thanks to Eloheh, I no longer must worry about accessibility, they handle that for me, so I can relax more. </p></div>
 	<div class="absolute3"><H1>Bruce Floyd</H1></div>
 	</div>
 </body>
