--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@ document.getElementById("timer").innerHTML = text;
 		</div>
 		
 		</div>
+
+		<div class="list_holder">
+			<div class="lists">
+<h2>You can trust Eloheh with your medical needs as we pride ourselfs on our:</h2>
+<ul>
+  <li>Costs</li>
+  <li>Cosistency</li>
+  <li>Releability</li>
+  <li>Speed</li>
+  <li>And Adaptability</li>
+</ul></div>
+			<div class="lists"><h2>To join the many satisfied customers of Eloheh,Follow the steps below</h2>
+
+<ol>
+  <li>Collect both your insurance and Id information</li>
+  <li>Grab your phone</li>
+  <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
+</ol>  </div>
+		</div>
+		
 	<div class="absolute12">
 		
 		
@@ -130,7 +150,7 @@ document.getElementById("timer").innerHTML = text;
 		
 		<div class="email">
 		<a href="mailto:espino53@purdue.edu">
-		<button type="button">Contact Me</button>
+		<button type="button">Contact Us</button>
 		</a>
 		
 		</div>
