--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ document.getElementById("timer").innerHTML = text;
 			<div class="lists"><h2>To join the many satisfied customers of Eloheh,Follow the steps below</h2>
 
 <ol>
-  <li>Collect both your insurance and Id information</li>
+  <li>Collect both your insurance and Id information<p><a href="https://www.medicaid.gov/" target="_blank">(Medicaid users click here)</a></p></li>
   <li>Grab your phone</li>
   <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
 </ol>  </div>
