--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ document.getElementById("timer").innerHTML = text;
   <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
 </ol>  </div>
 		</div>
-		
+</div>
 	<div class="absolute12">
 		
 		
