--- a/index.html
+++ b/index.html
@@ -53,7 +53,32 @@
   margin: 0;
   display: block;
  }
+
  
+  div.list_holder {
+  position: relative;
+  top:1%;
+  width: 50%;
+  aspect-ratio:17/9.2;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+  border: 3px solid #73AD21;
+ }
+ 
+   div.lists {
+  position: relative;
+  top:0%;
+  width: 99%;
+  height auto;
+  overflow:visible;
+  padding: 0;
+  margin: 0;
+  display: block;
+  border: 3px solid #73AD21;
+ }
+  
     div.update {
   position: absolute;
   width: 30%;
@@ -109,8 +134,8 @@ document.getElementById("timer").innerHTML = text;
 		
 		</div>
 
-		<div class="list_holder">
-			<div class="lists">
+<div class="list_holder">
+<div class="lists">
 <h2><b>You can trust Eloheh with your medical needs as we pride ourselves on our:</b></h2>
 <ul>
   <li>Costs</li>
@@ -121,14 +146,13 @@ document.getElementById("timer").innerHTML = text;
 </ul></div>
 <div class="lists">
 <h2><b></b>To join the many satisfied customers of Eloheh,Follow the steps below</b></h2>
-
 <ol>
   <li>Collect both your insurance and Id information<p><a href="https://www.medicaid.gov/" target="_blank">(Medicaid users click here)</a></p></li>
   <li>Grab your phone</li>
   <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
 </ol>  </div>
-		</div>
 </div>
+	
 	<div class="absolute12">
 		
 		
