--- a/index.html
+++ b/index.html
@@ -132,26 +132,26 @@ document.getElementById("timer").innerHTML = text;
 		<iframe width="100%" height="100%" src="testimonial_5/page.html" style="border:none;"></iframe>
 		</div>
 		
+		<div class="list_holder">
+		<div class="lists">
+		<h2>You can trust Eloheh with your medical needs as we pride ourselfs on our:</h2>
+		<ul>
+		  <li>Costs</li>
+		  <li>Cosistency</li>
+		  <li>Releability</li>
+		  <li>Speed</li>
+		  <li>And Adaptability</li>
+		</ul>
 		</div>
+		<div class="lists"><h2>To join the many satisfied customers of Eloheh,Follow the steps below</h2>
 
-<div class="list_holder">
-<div class="lists">
-<h2><b>You can trust Eloheh with your medical needs as we pride ourselves on our:</b></h2>
-<ul>
-  <li>Costs</li>
-  <li>Cosistency</li>
-  <li>Releability</li>
-  <li>Speed</li>
-  <li>And Adaptability</li>
-</ul></div>
-<div class="lists">
-<h2><b></b>To join the many satisfied customers of Eloheh,Follow the steps below</b></h2>
-<ol>
-  <li>Collect both your insurance and Id information<p><a href="https://www.medicaid.gov/" target="_blank">(Medicaid users click here)</a></p></li>
-  <li>Grab your phone</li>
-  <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
-</ol>  </div>
-</div>
+		<ol>
+		  <li>Collect both your insurance and Id information</li>
+		  <li>Grab your phone</li>
+		  <li>Call  4444-444-44444 or send us an email clicking the button at the bottom of the page</li>
+		</ol> 
+		</div>
+		</div>
 	
 	<div class="absolute12">
 		
