--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
  
      div.email {
   position: absolute;
+  display:flex
+  align-items:center;
+  justify-items:flex-end;
   width: 30%;
   left: 62%;
   height:auto;
@@ -81,6 +84,9 @@
   
     div.update {
   position: absolute;
+  display:flex
+  align-items:center;
+  justify-items:center;
   width: 30%;
   left: 31%;
   height:auto;
