--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      div.email {
   position: absolute;
   display:flex
-  align-items:center;
+  align-items:flex-end;
   justify-items:flex-end;
   width: 30%;
   left: 62%;
