--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ document.getElementById("timer").innerHTML = text;
 		
 		<div class="list_holder">
 		<div class="lists">
-		<h2>You can trust Eloheh with your medical needs as we pride ourselfs on our:</h2>
+		<h2>You can trust Eloheh with your medical needs as we pride ourselves on our:</h2>
 		<ul>
 		  <li>Costs</li>
 		  <li>Cosistency</li>
@@ -154,7 +154,7 @@ document.getElementById("timer").innerHTML = text;
 		  <li>And Adaptability</li>
 		</ul>
 		</div>
-		<div class="lists"><h2>To join the many satisfied customers of Eloheh,Follow the steps below</h2>
+		<div class="lists"><h2>To join the many satisfied customers of Eloheh,Follow the steps below:</h2>
 
 		<ol>
 		  <li>Collect both your insurance and Id information<p><a href="https://www.medicaid.gov/" target="_blank">(Medicaid users click here)</a></p></li>
