--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ div.absolute6 {
   height: 90%;
   border-bottom: 3px solid #4682B4;
   border-top: 3px solid #4682B4;
-  overflow:scroll;
+  overflow-y:scroll;
   padding: 0;
   margin: 0;
   color:#4682B4;
