--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ div.absolute6 {
   border-bottom: 3px solid #4682B4;
   border-top: 3px solid #4682B4;
   overflow-y:scroll;
-  padding: 0;
+  padding: 2%;
   margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
