--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div.absolute6 {
   height: 5%;
   border-top: 3px solid #4682B4;
   overflow:visible;
-  padding: 0;
+  ppadding-bottom: 2%;
   margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
