--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <style>	
+	
 div.absolute6 {
   position: relative;
   display:flex
@@ -29,7 +30,7 @@ div.absolute6 {
   height: 5%;
   border-top: 3px solid #4682B4;
   overflow:visible;
-  ppadding-bottom: 2%;
+  padding-bottom: 2%;
   margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
