--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <style>	
 	
-div.absolute6 {
+ div.absolute6 {
   position: relative;
   display:flex
   align-items:center;
@@ -12,7 +12,7 @@ div.absolute6 {
   height: 90%;
   border-bottom: 3px solid #4682B4;
   border-top: 3px solid #4682B4;
-  overflow-y:scroll;
+  overflow:scroll;
   padding: 0;
   margin: 0;
   color:#4682B4;
