--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
+  font-family: Garamond, serif;
  }
  
    div.title {
@@ -34,6 +35,7 @@
   margin: 0;
   color:#4682B4;
   background-color: #f0f8ff;
+  font-family: Garamond, serif;
  }
  
    div.absolute12 {
@@ -43,7 +45,7 @@
   overflow:visible;
   padding: 0;
   margin: 0;
-  display: block;
+  font-family: Garamond, serif;
  } 
  
  div.absolute7 {
@@ -54,8 +56,8 @@
   overflow:visible;
   padding: 0;
   margin: 0;
-  display: block;
   border-bottom: 3px solid #4682B4;
+  font-family: Garamond, serif;
  }
  
   div.list_holder {
@@ -66,7 +68,7 @@
   overflow:visible;
   padding: 0;
   margin: 0;
-  display: block;
+  font-family: Garamond, serif;
  
  }
  
@@ -78,8 +80,8 @@
   overflow:visible;
   padding: 0;
   margin: 0;
-  display: block;
   border-bottom: 3px solid #4682B4;
+  font-family: Garamond, serif;
  }
   
  
@@ -94,11 +96,12 @@
   height:auto;
   overflow:visible;
   margin: 1%;
+  font-family: Garamond, serif;
  }
  
     div.update {
   position: absolute;
-    display:flex
+  display:flex
   align-items:center;
   justify-items:center;
   width: 30%;
@@ -109,7 +112,7 @@
   overflow:visible;
   padding: 0;
   margin: 0;
-  display: block;
+  font-family: Garamond, serif;
  }
  
      div.download {
