--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   height: 85%;
   border-bottom: 3px solid #4682B4;
   border-top: 3px solid #4682B4;
-  overflow:scroll;
+  overflow-y:scroll;
+  overflow-x:visible;
   padding: 0;
   margin: 0;
   color:#4682B4;
